--- a/demo/package.json
+++ b/demo/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cross-env NODE_ENV=dev nodemon index.js",
+    "prd": "cross-env NODE_ENV=production pm2 start pm2.config.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.6",
     "redis": "^3.0.2"
   }
 }
